--- a/content/w2.html
+++ b/content/w2.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='W7.html'>W7</a><li><a href='W9.html'>W9</a><li><a href='W11.html'>W11</a></li></ul><li class='has-children'><a href='Parts.html'>Parts</a><ul class='dropdown'><li><a href='練習.html'>練習</a><li><a href='Base Plate.html'>Base Plate</a><li><a href='Bearing block A.html'>Bearing block A</a><li><a href='Bearing block B.html'>Bearing block B</a><li><a href='Dovetail bracket.html'>Dovetail bracket</a><li><a href='Dovetail stop.html'>Dovetail stop</a><li><a href='Gland blank.html'>Gland blank</a><li><a href='Gland.html'>Gland</a><li><a href='Giude plate.html'>Giude plate</a><li><a href='Head attachment.html'>Head attachment</a><li><a href='Head yoke.html'>Head yoke</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='HW1_Exam.html'>HW1_Exam</a><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='W10NX.html'>W10NX</a></li></li></ul></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam.html'>HW2_Exam</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a><li class='has-children'><a href='w7.html'>w7</a><ul class='dropdown'><li><a href='練習.html'>練習</a><li><a href='Base Plate.html'>Base Plate</a><li><a href='Bearing block A.html'>Bearing block A</a><li><a href='Bearing block B.html'>Bearing block B</a><li><a href='Dovetail bracket.html'>Dovetail bracket</a><li><a href='Dovetail stop.html'>Dovetail stop</a><li><a href='Gland blank.html'>Gland blank</a><li><a href='Gland.html'>Gland</a><li><a href='Giude plate.html'>Giude plate</a><li><a href='Head attachment.html'>Head attachment</a><li><a href='Head yoke.html'>Head yoke</a></li></ul><li><a href='w9.html'>w9</a><li><a href='w11.html'>w11</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='HW1_Exam.html'>HW1_Exam</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10NX.html'>w10NX</a></li></li></ul></ul><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam.html'>HW2_Exam</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,11 +141,18 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Weeks << <a href='Weeks.html'>Previous</a> <a href='W2.html'>Next</a> >> W2<br /><h1>W1</h1>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/B6Jy16Ggw6U?si=hIdzQsD8-u_jBSa9" title="YouTube video player" width="560"></iframe></p>
-<p>1.第一周主要是先建立github的作業網站，replit已無法再使用，所以只能使用近端開啟動態網頁</p>
-<p>2.複習過往的作業建立的方法</p>
-<br />Weeks << <a href='Weeks.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
+    <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3<br /><h1>w2</h1>
+<p>1.首先進入codespaces</p>
+<p>2.建立一個新的終端機</p>
+<p>3.在init_replit裡找到  <span>pip</span><span> </span><span>install</span><span> </span><span>flask</span><span> </span><span>flask_cors</span><span> </span><span>bs4</span><span> </span><span>lxml</span><span> </span><span>pelican</span><span> </span><span>markdown</span><span> </span><span>gevent</span></p>
+<p><span>4.在終端機複製上面的程式代碼</span></p>
+<p>  執行動態-----python3 main.py</p>
+<p>  執行靜態-----python3 main2.py</p>
+<p>5.推上到靜態網頁上</p>
+<p>    git add .</p>
+<p>    git commit -m"新增要推上去的簡介"</p>
+<p>    git push</p>
+<br />w1 << <a href='w1.html'>Previous</a> <a href='w3.html'>Next</a> >> w3</div>
         
     <!-- footer -->
       <div class="container">
