--- a/config/content.htm
+++ b/config/content.htm
@@ -1163,8 +1163,10 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p><span>    ①Solvespaces:可畫較簡易的3D圖形設計分析。<br/></span></p>
 <p>   <span> </span><span>②</span>NX:可以畫出曲面和模擬加工的各種運用，並且廣泛運用在業界當中，與solidworks和inventer比較多了一些功  能。</p>
 <p></p>
-<h2>w11</h2>
-<h1>HW1</h1>
+<h2>w11_hw</h2>
+<p>ZIP檔案:<a href="/downloads/41223131_p1.zip">/downloads/41223131_p1.zip</a></p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="351" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/IhitQumJ_qQ" title="SolveSpace w10_part1" width="679"></iframe></p><h1>HW1</h1>
 <p>Homework 1 (10%):</p>
 <p></p>
 <p style="padding-left: 30px;">利用 Solvespace 與 NX2312 建立<span> </span><a href="https://mde.tw/cad2024/content/Parts.html">Parts</a><span> </span>頁面中的零件</p>
