--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1163,7 +1163,9 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p><span>    ①Solvespaces:可畫較簡易的3D圖形設計分析。<br/></span></p>
 <p>   <span> </span><span>②</span>NX:可以畫出曲面和模擬加工的各種運用，並且廣泛運用在業界當中，與solidworks和inventer比較多了一些功  能。</p>
 <p></p>
-<h2>w11</h2>
+<h2>w11_hw</h2>
+<p>ZIP檔案:<a href="/downloads/41223131_p1.zip">/downloads/41223131_p1.zip</a></p>
+<p></p>
 <h1>HW1</h1>
 <p>Homework 1 (10%):</p>
 <p></p>
@@ -1195,7 +1197,7 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p>零件考試題目以 NX2312 繪圖操作過程影片如下:</p>
 <p style="padding-left: 30px;">請將操作影片嵌入 ......</p>
 <p style="padding-left: 30px;">所完成的零件檔案下載</p>
-<h2>W10</h2>
+<h2>w10</h2>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part12.stl">模型1</a> <!-- 第一題的模型 --></div>
@@ -1294,7 +1296,7 @@ function initModelParts() {
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
 </script>
-<h3>W10NX</h3>
+<h3>w10NX</h3>
 <p>W10的考試利用NX來畫並且測試</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/sl3TUBU5-rI" title="W10 NX的操作影片" width="956"></iframe></p>
 <h1>HW2</h1>
