重新測試W11作業上傳

--- a/config/content.htm
+++ b/config/content.htm
@@ -1176,7 +1176,7 @@ function createModelPart(index, url) {
     // 動態生成 HTML
     const modelPartDiv = document.createElement('div');
     modelPartDiv.className = "model-container"; // 設置類名方便管理樣式
-    modelPartDiv.style = "width: 42%; margin-bottom: 20px;"; // 減小寬度，使間距更大
+    modelPartDiv.style = "width: 48%; margin-bottom: 20px;"; // 左右排列，兩個模型佔一行
 
     modelPartDiv.innerHTML = `
         <div id="models${index}">
