--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1165,95 +1165,73 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p></p>
 <h2>w11_hw</h2>
 <p>ZIP檔案:<a href="/downloads/41223131_p1.zip">/downloads/41223131_p1.zip</a></p>
+<p></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
-<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_p1.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_p2.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_p4.stl">模型2</a> <!-- 第三題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_p5.stl">模型2</a> <!-- 第四題的模型 --></div>
+<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_p1.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_p2.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_p4.stl">模型3</a> <!-- 第三題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_p5.stl">模型4</a> <!-- 第四題的模型 --></div>
 <!-- 動態生成的模型部分 -->
-<div id="modelParts1"></div>
+<div id="modelParts1" style="display: flex; flex-wrap: wrap; justify-content: space-between;"></div>
 <script type="text/javascript">
-// 函數用來動態生成模型部件
 function createModelPart(index, url) {
-    var modelPartDiv = document.createElement('div');
+    // 動態生成 HTML
+    const modelPartDiv = document.createElement('div');
+    modelPartDiv.className = "model-container"; // 設置類名方便管理樣式
+    modelPartDiv.style = "width: 48%; margin-bottom: 20px; margin-right: 4%;"; // 調整間距
+
     modelPartDiv.innerHTML = `
         <div id="models${index}">
             <canvas height="300" id="cv${index}" style="border: 1px solid;" width="400"></canvas>
         </div>
 
         <div style="width: 400px; height: 70px; border: 1px solid; margin-bottom: 20px;">
-            Model Color:<input id="mdlClr${index}" onchange="changeOption${index}('ModelColor',this.value)" style="margin-right: 50px;" type="color" value="#00ff40">
-            Back Color1:<input id="bckClr${index}_1" onchange="changeOption${index}('BackgroundColor1',this.value)" style="margin-right: 50px;" type="color">
-            Back Color2:<input id="bckClr${index}_2" onchange="changeOption${index}('BackgroundColor2',this.value)" type="color"><br>
-            Render Mode:<select id="render${index}" onchange="changeOption${index}('RenderMode',this.value)">
-                <option>Flat</option>
-                <option>Point</option>
-                <option>Wireframe</option>
-                <option>Smooth</option>
+            Model Color: <input id="mdlClr${index}" type="color" value="#00ff40" style="margin-right: 50px;">
+            Back Color1: <input id="bckClr${index}_1" type="color" value="#000000" style="margin-right: 50px;">
+            Back Color2: <input id="bckClr${index}_2" type="color" value="#000000"><br>
+            Render Mode:
+            <select id="render${index}">
+                <option value="Flat">Flat</option>
+                <option value="Point">Point</option>
+                <option value="Wireframe">Wireframe</option>
+                <option value="Smooth">Smooth</option>
             </select>
-            Definition:<select id="defini${index}" onchange="changeOption${index}('Definition',this.value)">
-                <option>Standard</option>
-                <option>low</option>
-                <option>high</option>
+            Definition:
+            <select id="defini${index}">
+                <option value="Standard">Standard</option>
+                <option value="low">Low</option>
+                <option value="high">High</option>
             </select>
         </div>
     `;
     document.getElementById('modelParts1').appendChild(modelPartDiv);
 
-    // 初始化觀察者和選項
-    window[`viewer${index}`] = null;
+    // 初始化 Viewer
+    const canvas = document.getElementById(`cv${index}`);
+    const viewer = new JSC3D.Viewer(canvas);
 
-    // 獲取選項的函數
-    window[`getOptions${index}`] = function() {
-        var mc = document.getElementById(`mdlClr${index}`).value;
-        var bc1 = document.getElementById(`bckClr${index}_1`).value;
-        var bc2 = document.getElementById(`bckClr${index}_2`).value;
-        var ren = document.getElementById(`render${index}`).value;
-        var def = document.getElementById(`defini${index}`).value;
-        return {ModelColor: mc, BackgroundColor1: bc1, BackgroundColor2: bc2, RenderMode: ren, Definition: def};
-    };
-
-    window[`readSTLfile${index}`] = function(opt, canvasId) {
-        var canvas = document.getElementById(canvasId);
-        window[`viewer${index}`] = new JSC3D.Viewer(canvas);
-        window[`viewer${index}`].setParameter('SceneUrl', opt.SceneUrl);
-        window[`viewer${index}`].setParameter('InitRotationX', 0);
-        window[`viewer${index}`].setParameter('InitRotationY', 0);
-        window[`viewer${index}`].setParameter('InitRotationZ', 0);
-        window[`viewer${index}`].setParameter('ModelColor', opt.ModelColor);
-        window[`viewer${index}`].setParameter('BackgroundColor1', opt.BackgroundColor1);
-        window[`viewer${index}`].setParameter('BackgroundColor2', opt.BackgroundColor2);
-        window[`viewer${index}`].setParameter('RenderMode', opt.RenderMode);
-        window[`viewer${index}`].setParameter('Definition', opt.Definition);
-        window[`viewer${index}`].init();
-        window[`viewer${index}`].update();
-    };
-
-    window[`changeOption${index}`] = function(strOpt, strValue) {
-        console.log(`PART ${index} change ` + strOpt + " to " + strValue);
-        window[`viewer${index}`].setParameter(strOpt, strValue);
-        window[`viewer${index}`].init();
-        window[`viewer${index}`].update();
-    };
-
-    window[`openByGet${index}`] = function() {
-        var opt = window[`getOptions${index}`]();
-        opt.SceneUrl = url;
-        window[`readSTLfile${index}`](opt, `cv${index}`);
-    };
-
-    window[`openByGet${index}`]();  // 加載模型
+    // 設置初始參數
+    viewer.setParameter('SceneUrl', url);
+    viewer.setParameter('InitRotationX', 0);
+    viewer.setParameter('InitRotationY', 0);
+    viewer.setParameter('InitRotationZ', 0);
+    viewer.setParameter('ModelColor', '#00ff40');
+    viewer.setParameter('BackgroundColor1', '#000000');  // 背景顏色設為黑色
+    viewer.setParameter('BackgroundColor2', '#000000');  // 背景顏色設為黑色
+    viewer.setParameter('RenderMode', 'Flat');
+    viewer.setParameter('Definition', 'Standard');
+    viewer.init();
+    viewer.update();
 }
 
 function initModelParts() {
-    var links = document.querySelectorAll('#modelLinks1 a');
+    const links = document.querySelectorAll('#modelLinks1 a');
     
     links.forEach(function(link, index) {
-        createModelPart(index + 1, link.href); // 初始化模型
+        createModelPart(index + 1, link.href); // 初始化模型，順序保持一致
     });
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h1>HW1</h1>
+</script><h1>HW1</h1>
 <p>Homework 1 (10%):</p>
 <p></p>
 <p style="padding-left: 30px;">利用 Solvespace 與 NX2312 建立<span> </span><a href="https://mde.tw/cad2024/content/Parts.html">Parts</a><span> </span>頁面中的零件</p>
