--- a/config/content.htm
+++ b/config/content.htm
@@ -1176,14 +1176,14 @@ function createModelPart(index, url) {
     // 動態生成 HTML
     const modelPartDiv = document.createElement('div');
     modelPartDiv.className = "model-container"; // 設置類名方便管理樣式
-    modelPartDiv.style = "width: 48%; margin-bottom: 20px;"; // 左右排列，兩個模型佔一行
+    modelPartDiv.style = "width: 48%; margin-bottom: 15px; margin-right: 2%;"; // 減少間隔
 
     modelPartDiv.innerHTML = `
         <div id="models${index}">
             <canvas height="300" id="cv${index}" style="border: 1px solid;" width="400"></canvas>
         </div>
 
-        <div style="width: 400px; height: 70px; border: 1px solid; margin-bottom: 20px;">
+        <div style="width: 400px; height: 70px; border: 1px solid; margin-bottom: 15px;">
             Model Color: <input id="mdlClr${index}" type="color" value="#00ff40" style="margin-right: 50px;">
             Back Color1: <input id="bckClr${index}_1" type="color" value="#000000" style="margin-right: 50px;">
             Back Color2: <input id="bckClr${index}_2" type="color" value="#000000"><br>
