--- a/config/content.htm
+++ b/config/content.htm
@@ -1176,7 +1176,7 @@ function createModelPart(index, url) {
     // 動態生成 HTML
     const modelPartDiv = document.createElement('div');
     modelPartDiv.className = "model-container"; // 設置類名方便管理樣式
-    modelPartDiv.style = "width: 48%; margin-bottom: 15px; margin-right: 2%;"; // 減少間隔
+    modelPartDiv.style = "width: 48%; margin-bottom: 20px; margin-right: 1.5%;"; // 設定適當的間距
 
     modelPartDiv.innerHTML = `
         <div id="models${index}">
