增加W7的Sovespaces操作零件頁面

--- a/config/content.htm
+++ b/config/content.htm
@@ -43,6 +43,19 @@
 <p><span>網路(google):</span></p>
 <p><span><a href="https://blog.csdn.net/gitblog_00264/article/details/141452063">分析solvespaces的職場功用和能力</a></span></p>
 <h2>w7</h2>
+<p><span style="color: #003300;"><span style="text-decoration: underline;"><span>Sovespaces</span></span>的操作零件頁面</span>:</p>
+<p><span>①</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/%E7%B7%B4%E7%BF%92.html">練習</a></p>
+<p><span>②</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Base%20Plate.html">Base Plate</a></p>
+<p><span>③</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Bearing%20block%20A.html">Bearing block A</a></p>
+<p><span>④</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Bearing%20block%20B.html">Bearing block B</a></p>
+<p><span>⑤</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Dovetail%20bracket.html">Dovetail bracket</a></p>
+<p><span>⑥</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Dovetail%20stop.html">Dovetail stop</a></p>
+<p><span>⑦</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Gland%20blank.html">Gland blank</a></p>
+<p><span>⑧</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Gland.html">Gland</a></p>
+<p><span>⑨</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Giude%20plate.html">Giude plate</a></p>
+<p><span>⑩</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Head%20attachment.html">Head attachment</a></p>
+<p><span>⑪</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Head%20yoke.html">Head yoke</a></p>
+<p>操作步驟:</p>
 <p>1.利用solvespaces畫圖完成後</p>
 <p>2.在<span style="text-decoration: underline;">File</span> 中找到<span style="text-decoration: underline;"> Export Triangle Mesh</span></p>
 <p>3.存到公用下載中，並且改檔名為 412231XX_part1.stl</p>
@@ -52,8 +65,7 @@
 <p>6.若成功之後在新分頁輸入如下修改小部分即可開啟:<a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl"></a></p>
 <p><a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl">https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl</a></p>
 <p>7.開啟老師給html的程式碼並且在裡面如上面修改成自己的html網站網址，把code放置在自己網站中即可完成。</p>
-<p></p>
-<h3>練習</h3>
+<p></p><h3>練習</h3>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="351" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/G1S5h2gos0M" title="" width="696"></iframe></p>
 <p></p>
 <p></p>
