--- a/content/w7.html
+++ b/content/w7.html
@@ -142,6 +142,19 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='練習.html'>Next</a> >> 練習<br /><h1>w7</h1>
+<p><span style="color: #003300;"><span style="text-decoration: underline;"><span>Sovespaces</span></span>的操作零件頁面</span>:</p>
+<p><span>①</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/%E7%B7%B4%E7%BF%92.html">練習</a></p>
+<p><span>②</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Base%20Plate.html">Base Plate</a></p>
+<p><span>③</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Bearing%20block%20A.html">Bearing block A</a></p>
+<p><span>④</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Bearing%20block%20B.html">Bearing block B</a></p>
+<p><span>⑤</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Dovetail%20bracket.html">Dovetail bracket</a></p>
+<p><span>⑥</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Dovetail%20stop.html">Dovetail stop</a></p>
+<p><span>⑦</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Gland%20blank.html">Gland blank</a></p>
+<p><span>⑧</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Gland.html">Gland</a></p>
+<p><span>⑨</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Giude%20plate.html">Giude plate</a></p>
+<p><span>⑩</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Head%20attachment.html">Head attachment</a></p>
+<p><span>⑪</span>.<a href="https://mdecad2024.github.io/hw-yuhao-08/content/Head%20yoke.html">Head yoke</a></p>
+<p>操作步驟:</p>
 <p>1.利用solvespaces畫圖完成後</p>
 <p>2.在<span style="text-decoration: underline;">File</span> 中找到<span style="text-decoration: underline;"> Export Triangle Mesh</span></p>
 <p>3.存到公用下載中，並且改檔名為 412231XX_part1.stl</p>
@@ -151,8 +164,7 @@ img.add_border {
 <p>6.若成功之後在新分頁輸入如下修改小部分即可開啟:<a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl"></a></p>
 <p><a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl">https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl</a></p>
 <p>7.開啟老師給html的程式碼並且在裡面如上面修改成自己的html網站網址，把code放置在自己網站中即可完成。</p>
-<p></p>
-<br />w3 << <a href='w3.html'>Previous</a> <a href='練習.html'>Next</a> >> 練習</div>
+<p></p><br />w3 << <a href='w3.html'>Previous</a> <a href='練習.html'>Next</a> >> 練習</div>
         
     <!-- footer -->
       <div class="container">
