螢幕截圖組合圖

--- a/config/content.htm
+++ b/config/content.htm
@@ -1261,7 +1261,7 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p>1.檢查作業: <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w7.html">w7</a></p>
 <p>                <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w10.html">w10</a></p>
 <p>                <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w11_hw.html">w11</a></p>
-<h1>HW1</h1>
+<p><img alt="" height="296" src="/images/螢幕截圖.png" width="527"/></p><h1>HW1</h1>
 <p>Homework 1 (10%):</p>
 <p></p>
 <p style="padding-left: 30px;">利用 Solvespace 與 NX2312 建立<span> </span><a href="https://mde.tw/cad2024/content/Parts.html">Parts</a><span> </span>頁面中的零件</p>
