--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1297,7 +1297,7 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part12.stl">模型1</a> <!-- 第一題的模型 --></div>
 <!-- 動態生成的模型部分 -->
-<div id="modelParts1"></div>
+<div id="modelParts1"><a href="https://mdecad2024.github.io/hw-yuhao-08/content/w10NX.html">嘗試利用NX來繪圖考試連結</a></div>
 <script type="text/javascript">
 // 函數用來動態生成模型部件
 function createModelPart(index, url, ytUrl, title) {
@@ -1390,8 +1390,7 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script>
-<h3>w10NX</h3>
+</script><h3>w10NX</h3>
 <p>W10的考試利用NX來畫並且測試</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/sl3TUBU5-rI" title="W10 NX的操作影片" width="956"></iframe></p>
 <h1>HW2</h1>
