W11_hw新增組合操作影片

--- a/content/W12_ch.html
+++ b/content/W12_ch.html
@@ -145,7 +145,7 @@ img.add_border {
 <p>1.檢查作業: <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w7.html">w7</a></p>
 <p>                <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w10.html">w10</a></p>
 <p>                <a href="https://mdecad2024.github.io/hw-yuhao-08/content/w11_hw.html">w11</a></p>
-<p><img alt="" height="296" src="./../images/螢幕截圖.png" width="527"/></p><br />W11影片連結 << <a href='W11影片連結.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
+<p></p><br />W11影片連結 << <a href='W11影片連結.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
