--- a/content/w11_hw.html
+++ b/content/w11_hw.html
@@ -144,17 +144,9 @@ img.add_border {
     <div id="tipue_search_content">w9 << <a href='w9.html'>Previous</a> <a href='W11影片連結.html'>Next</a> >> W11影片連結<br /><h1>w11_hw</h1>
 <p>同組影片網站連結:<a href="https://mdecad2024.github.io/hw-41223150/content/W11%E5%BD%B1%E7%89%87.html">41223150</a></p>
 <p>我的影片網站連結:<a href="https://mdecad2024.github.io/hw-yuhao-08/content/W11%E5%BD%B1%E7%89%87%E9%80%A3%E7%B5%90.html">41223131</a></p>
-<p>ZIP檔案:<a href="./../downloads/41223131_p2.zip">/downloads/41223131_p1.zip</a></p>
-<p>           <a href="./../downloads/41223131_p2.zip">/downloads/41223131_p2.zip</a></p>
-<p>          <a href="./../downloads/41223150_p3.zip">/downloads/41223150_p3.zip</a> </p>
-<p>          <a href="./../downloads/41223131_p4.zip">/downloads/41223131_p4.zip</a></p>
-<p>          <a href="./../downloads/41223131_p5.zip">/downloads/41223131_p5.zip</a></p>
-<p>         <a href="./../downloads/41223150_p6.zip">/downloads/41223150_p6.zip</a></p>
-<p>        <a href="./../downloads/41223150_p7.zip">/downloads/41223150_p7.zip</a></p>
-<p></p>
 <script src="./../cmsimde/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
-<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_p1.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_p2.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_p4.stl">模型3</a> <!-- 第三題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_p5.stl">模型4</a> <!-- 第四題的模型 --><a href="https://s104.cycu.org/~41223150/41223150_p3.stl">模型4</a> <!-- 第五題的模型 --><a href="https://s104.cycu.org/~41223150/41223150_p6.stl">模型4</a> <!-- 第六題的模型 --><a href="https://s104.cycu.org/~41223150/41223150_p7.stl">模型4</a> <!-- 第七題的模型 --></div>
+<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_p1.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_p2.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223150/41223150_p3.stl">模型3</a> <!-- 第三題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_p4.stl">模型4</a> <!-- 第四題的模型 --> <a href="https://s104.cycu.org/~41223131/41223131_p5.stl">模型5</a> <!-- 第五題的模型 --> <a href="https://s104.cycu.org/~41223150/41223150_p6.stl">模型6</a> <!-- 第六題的模型 --> <a href="https://s104.cycu.org/~41223150/41223150_p7.stl">模型7</a> <!-- 第七題的模型 --></div>
 <!-- 動態生成的模型部分 -->
 <div id="modelParts1" style="display: flex; flex-wrap: wrap;"></div>
 <script type="text/javascript">
@@ -217,7 +209,10 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><br />w9 << <a href='w9.html'>Previous</a> <a href='W11影片連結.html'>Next</a> >> W11影片連結</div>
+</script>
+<p>組合操作影片: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/xfiuIVr7FDY" title="W11 NX組合影片" width="956"></iframe></p>
+<p>螢幕截圖如下:</p>
+<p><img alt="" height="281" src="./../images/螢幕截圖.png" width="501"/></p><br />w9 << <a href='w9.html'>Previous</a> <a href='W11影片連結.html'>Next</a> >> W11影片連結</div>
         
     <!-- footer -->
       <div class="container">
